--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ author_email = russell@keith-magee.com
 maintainer = Russell Keith-Magee
 maintainer_email = russell@keith-magee.com
 classifiers =
-    Development Status :: 4 - Beta
+    Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
     License :: OSI Approved :: BSD License
     Operating System :: iOS
@@ -27,8 +27,8 @@ classifiers =
 license = New BSD
 license_file = LICENSE
 description = A shim that redirects stderr/stdout to the Apple System Log (NSLog)
-long_description = file: README.rst
-long_description_content_type = text/x-rst; charset=UTF-8
+long_description = file: README.md
+long_description_content_type = text/markdown; charset=UTF-8
 keywords =
     apple
     nslog
