--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,8 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
     Programming Language :: Python :: 3 :: Only
     Topic :: Software Development
     Topic :: Utilities
@@ -39,6 +41,4 @@ platforms = any
 
 [options]
 py_modules = nslog
-
-[bdist_wheel]
-universal=1
+python_requires = >= 3.7
