Add pre-commit configuration.

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,3 +42,8 @@ platforms = any
 [options]
 py_modules = nslog
 python_requires = >= 3.7
+
+[flake8]
+max-complexity = 25
+max-line-length = 119
+ignore = E203
